# Market-Microstructure

./: .gitignore  GETTING_STARTED.md  HYBRID_L2L3.md  QUICKSTART.md  README.md  build.ps1  requirements.txt
analysis/: analyze_logs.py
data/: 20260104_122337-BTCUSDT.events  20260104_160614-BTCUSDT.events  20260107_221334-BTCUSDT.events
engine/: CMakeLists.txt  main.cpp
engine/io/: EventReader.cpp  EventReader.h
engine/metrics/: Metrics.cpp  Metrics.h
engine/order_book/: Order.h  OrderBook.cpp  OrderBook.h
engine/strategy/: Strategy.cpp  Strategy.h
ingestion/: data.py
logs/BTCUSDT_2026_01_04_14_08_59/: summary.txt
logs/BTCUSDT_2026_01_04_16_12_36/: summary.txt
logs/BTCUSDT_2026_01_07_22_30_40/: summary.txt
tests/: create_test_data.py  demo_hybrid_lob.cpp  test_hybrid_lob.cpp
